2011-02-17  Ojan Vafai  <ojan@chromium.org>

        Reviewed by Adam Barth.

        fix escape handling in code review tool
        https://bugs.webkit.org/show_bug.cgi?id=54722

        This broke with http://trac.webkit.org/changeset/78948.
        Apparently jquery events get a wrapped object that
        does not expose keyIdentifier.

        * code-review.js:

2011-02-17  Ojan Vafai  <ojan@chromium.org>

        Reviewed by Adam Barth.

        create comments when hitting enter with a focused diff
        https://bugs.webkit.org/show_bug.cgi?id=54719

        * code-review.js:

2011-02-17  Ojan Vafai  <ojan@chromium.org>

        Reviewed by Adam Barth.

        use actual browser focus in the code review tool
        https://bugs.webkit.org/show_bug.cgi?id=54726

        This makes keyboard handling play better with focusable element
        (i.e. links/textareas/buttons). Also, in theory, this makes
        the review tool more amenable to screen readers (I think).

        * PrettyPatch/PrettyPatch.rb:
        * code-review.js:

2011-02-17  Ojan Vafai  <ojan@chromium.org>

        Reviewed by Antonio Gomes.

        make event handling work in Gecko
        https://bugs.webkit.org/show_bug.cgi?id=54702

        Gecko doesn't support the global event property. It's an IE-ism.

        * code-review.js:

2011-02-14  Ojan Vafai  <ojan@chromium.org>

        Reviewed by Adam Barth.

        allow for modifying comments without the mouse
        https://bugs.webkit.org/show_bug.cgi?id=54433

        Use n/p to navigate the comments.
        Enter to begin editing a comment.
        Escape to finish editing a comment.

        * code-review.js:

2011-02-14  Ojan Vafai  <ojan@chromium.org>

        Reviewed by Adam Barth.

        improve line selection in the code review tool
        https://bugs.webkit.org/show_bug.cgi?id=54430

        -shift+click now extends the comment context